<resources>
    <string name="app_name">Intents Playground</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="open_main_activity">Open Main Activity</string>
    <string name="my_counter">My Counter</string>
    <string name="_0">0</string>
    <string name="dec">-</string>
    <string name="inc">+</string>
    <string name="send_back">SEND BACK</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="data">data</string>
    <string name="open_webpage">Open Webpage</string>
    <string name="dial_number">Dial Number</string>
    <string name="sharetext">ShareText</string>
    <string name="sending_amp_receiving_data"><![CDATA[Sending & Receiving Data]]></string>
    <string name="go">Go</string>
    <string name="send">send</string>
    <string name="initial_count">Initial Count</string>
    <string name="textview">TextView</string>
</resources>